--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="about_section">
                 <span style="display: block"
                   >Second generation of Availy - Slack bot used to request off
-                  and cover shifts.</span
+                  and cover shifts. Hosted on Cloudflare Workers</span
                 >
               </div>
               <div class="bottom_section">
@@ -109,6 +109,27 @@
               </div>
             </section>
           </a>
+          <a
+            href="https://github.com/AdamSpera/meraki-excap-cloudflare"
+            target="_blank"
+          >
+            <section>
+              <div class="section_title">
+                Meraki Captive Portal with Cloudflare
+              </div>
+              <div class="about_section">
+                <span style="display: block"
+                  >An Open-Source Meraki Captive Portal using Cloudflare Pages.
+                </span>
+              </div>
+              <div class="bottom_section">
+                <span style="display: inline-block"
+                  ><i class="fas fa-code"></i>&nbsp; HTML/Bootstrap/JS & Meraki
+                  API</span
+                >
+              </div>
+            </section>
+          </a>
           <a href="https://github.com/breyr/stockwyse" target="_blank">
             <section>
               <div class="section_title">stockWYSE</div>
@@ -121,7 +142,7 @@
               </div>
               <div class="bottom_section">
                 <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; HTML</span
+                  ><i class="fas fa-code"></i>&nbsp; Python & Flask</span
                 >
               </div>
             </section>
