--- a/index.html
+++ b/index.html
@@ -77,6 +77,28 @@
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
+          <a
+            href="https://developer.cisco.com/codeexchange/github/repo/AdamSpera/meraki-excap-cloudflare/"
+            target="_blank"
+          >
+            <section>
+              <div class="section_title">
+                Meraki Captive Portal with Cloudflare
+              </div>
+              <div class="about_section">
+                <span style="display: block"
+                  >The Meraki Captive Portal with Cloudflare is an open-source
+                  and freely accessible solution for creating customized Captive
+                  Portals tailored to Cisco Meraki wireless networks.</span
+                >
+              </div>
+              <div class="bottom_section">
+                <span style="display: inline-block"
+                  ><i class="fas fa-code"></i>&nbsp; HTML/CSS/JS</span
+                >
+              </div>
+            </section>
+          </a>
           <a href="https://github.com/breyr/availyv2" target="_blank">
             <section>
               <div class="section_title">Availy.v2</div>
