--- a/index.html
+++ b/index.html
@@ -75,8 +75,27 @@
     </div>
     <div id="display">
       <div id="work">
-        <h1>Work.</h1>
+        <h1>Projects.</h1>
         <div class="projects" id="work_section">
+          <a
+            href="https://www.linkedin.com/pulse/idiosplash-open-source-meraki-ipsk-solution-wireless-networks-spera-tyfde%3FtrackingId=dxk2KMbJQuyqMYlWpqvMWQ%253D%253D/?trackingId=7RNaiFHsT36gowikLbXnag%3D%3D"
+            target="_blank"
+          >
+            <section>
+              <div class="section_title">IdioSplash - Proof of Concept</div>
+              <div class="about_section">
+                <span style="display: block"
+                  >Open-Source Meraki IPSK Solution for Wireless Networks</span
+                >
+              </div>
+              <div class="bottom_section">
+                <span style="display: inline-block"
+                  ><i class="fas fa-code"></i>&nbsp; AWS (DynamoDB, Lambda, API
+                  Gateway), Python, HTML, JS, CSS</span
+                >
+              </div>
+            </section>
+          </a>
           <a
             href="https://developer.cisco.com/codeexchange/github/repo/AdamSpera/meraki-excap-cloudflare/"
             target="_blank"
