Added AWS OTP project

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
       <div id="work">
         <h1>Projects.</h1>
         <div class="projects" id="work_section">
+          <a href="https://github.com/breyr/simpleawsotp" target="_blank">
+            <section>
+              <div class="section_title">Simple AWS OTP System</div>
+              <div class="about_section">
+                <span style="display: block"
+                  >AWS-based OTP (One-Time Password) system.</span
+                >
+              </div>
+              <div class="bottom_section">
+                <span style="display: inline-block"
+                  ><i class="fas fa-code"></i>&nbsp; AWS (DynamoDB, Lambda, API
+                  Gateway), Python</span
+                >
+              </div>
+            </section>
+          </a>
           <a
             href="https://www.linkedin.com/pulse/idiosplash-open-source-meraki-ipsk-solution-wireless-networks-spera-tyfde%3FtrackingId=dxk2KMbJQuyqMYlWpqvMWQ%253D%253D/?trackingId=7RNaiFHsT36gowikLbXnag%3D%3D"
             target="_blank"
