Remove meraki captive portal dupe

--- a/index.html
+++ b/index.html
@@ -7,26 +7,22 @@
     <title>breyr</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css" />
     <link
       rel="icon"
       href="https://avatars.githubusercontent.com/u/24422089?v=4"
-      type="image/png"
-    />
+      type="image/png" />
   </head>
 
   <body>
@@ -39,37 +35,29 @@
         style="
           background: url(https://avatars.githubusercontent.com/u/24422089?v=4)
             center;
-        "
-      ></div>
+        "></div>
       <div id="username">
-        <span style="display: block">Brey Rivera</span
-        ><a href="https://github.com/breyr">@breyr</a>
+        <span style="display: block">Brey Rivera</span><a
+          href="https://github.com/breyr">@breyr</a>
       </div>
       <div id="userbio" style="display: block">
         Howdy! I'm Brey, a Data and Computer Science undergrad at Arcadia
         University. I have a passion for data, programming, and aerospace!
       </div>
       <div id="about">
-        <span style="display: block"
-          ><i class="fas fa-file-download"></i> &nbsp;&nbsp;
+        <span style="display: block"><i class="fas fa-file-download"></i>
+          &nbsp;&nbsp;
           <a
             href="https://pub-a992ee0ec0954f6dbf5bcbd43eda038f.r2.dev/Resume.pdf"
-            target="_blank"
-            >Resume</a
-          ></span
-        >
-        <span style="display: block"
-          ><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Low Earth
-          Orbit</span
-        >
+            target="_blank">Resume</a></span>
+        <span style="display: block"><i class="fas fa-map-marker-alt"></i>
+          &nbsp;&nbsp; Low Earth
+          Orbit</span>
         <div class="socials">
-          <span style="display: block"
-            ><a
+          <span style="display: block"><a
               href="https://www.linkedin.com/in/breyrivera/"
               target="_blank"
-              class="socials"
-              ><i class="fab fa-linkedin-in"></i></a
-          ></span>
+              class="socials"><i class="fab fa-linkedin-in"></i></a></span>
         </div>
       </div>
     </div>
@@ -81,56 +69,48 @@
             <section>
               <div class="section_title">Simple AWS OTP System</div>
               <div class="about_section">
-                <span style="display: block"
-                  >AWS-based OTP (One-Time Password) system.</span
-                >
+                <span style="display: block">AWS-based OTP (One-Time Password)
+                  system.</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; AWS (DynamoDB, Lambda, API
-                  Gateway), Python</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  AWS (DynamoDB, Lambda, API
+                  Gateway), Python</span>
               </div>
             </section>
           </a>
           <a
             href="https://www.linkedin.com/pulse/idiosplash-open-source-meraki-ipsk-solution-wireless-networks-spera-tyfde%3FtrackingId=dxk2KMbJQuyqMYlWpqvMWQ%253D%253D/?trackingId=7RNaiFHsT36gowikLbXnag%3D%3D"
-            target="_blank"
-          >
+            target="_blank">
             <section>
               <div class="section_title">IdioSplash - Proof of Concept</div>
               <div class="about_section">
-                <span style="display: block"
-                  >Open-Source Meraki IPSK Solution for Wireless Networks</span
-                >
+                <span style="display: block">Open-Source Meraki IPSK Solution
+                  for Wireless Networks</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; AWS (DynamoDB, Lambda, API
-                  Gateway), Python, HTML, JS, CSS</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  AWS (DynamoDB, Lambda, API
+                  Gateway), Python, HTML, JS, CSS</span>
               </div>
             </section>
           </a>
           <a
             href="https://developer.cisco.com/codeexchange/github/repo/AdamSpera/meraki-excap-cloudflare/"
-            target="_blank"
-          >
+            target="_blank">
             <section>
               <div class="section_title">
                 Meraki Captive Portal with Cloudflare
               </div>
               <div class="about_section">
-                <span style="display: block"
-                  >The Meraki Captive Portal with Cloudflare is an open-source
+                <span style="display: block">The Meraki Captive Portal with
+                  Cloudflare is an open-source
                   and freely accessible solution for creating customized Captive
-                  Portals tailored to Cisco Meraki wireless networks.</span
-                >
+                  Portals tailored to Cisco Meraki wireless networks.</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; HTML/CSS/JS</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  HTML/CSS/JS</span>
               </div>
             </section>
           </a>
@@ -138,15 +118,13 @@
             <section>
               <div class="section_title">Availy.v2</div>
               <div class="about_section">
-                <span style="display: block"
-                  >Second generation of Availy - Slack bot used to request off
-                  and cover shifts. Hosted on Cloudflare Workers</span
-                >
+                <span style="display: block">Second generation of Availy - Slack
+                  bot used to request off
+                  and cover shifts. Hosted on Cloudflare Workers</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; TypeScript</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  TypeScript</span>
               </div>
             </section>
           </a>
@@ -154,36 +132,13 @@
             <section>
               <div class="section_title">Availy</div>
               <div class="about_section">
-                <span style="display: block"
-                  >Availy is a shift application bot that allows users to
-                  request off and cover shifts.</span
-                >
+                <span style="display: block">Availy is a shift application bot
+                  that allows users to
+                  request off and cover shifts.</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; JavaScript</span
-                >
-              </div>
-            </section>
-          </a>
-          <a
-            href="https://github.com/AdamSpera/meraki-excap-cloudflare"
-            target="_blank"
-          >
-            <section>
-              <div class="section_title">
-                Meraki Captive Portal with Cloudflare
-              </div>
-              <div class="about_section">
-                <span style="display: block"
-                  >An Open-Source Meraki Captive Portal using Cloudflare Pages.
-                </span>
-              </div>
-              <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; HTML/Bootstrap/JS & Meraki
-                  API</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  JavaScript</span>
               </div>
             </section>
           </a>
@@ -191,16 +146,14 @@
             <section>
               <div class="section_title">stockWYSE</div>
               <div class="about_section">
-                <span style="display: block"
-                  >stockWYSE is a Flask web app that allows users to create a
+                <span style="display: block">stockWYSE is a Flask web app that
+                  allows users to create a
                   watchlist of tickers and get up-to-date news for each
-                  company.</span
-                >
+                  company.</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; Python & Flask</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  Python & Flask</span>
               </div>
             </section>
           </a>
@@ -208,34 +161,29 @@
             <section>
               <div class="section_title">Destiny Dump</div>
               <div class="about_section">
-                <span style="display: block"
-                  >CS358 Final Project - SQLite DB with interactive Python
-                  program</span
-                >
+                <span style="display: block">CS358 Final Project - SQLite DB
+                  with interactive Python
+                  program</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; Python & SQLite</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  Python & SQLite</span>
               </div>
             </section>
           </a>
           <a
             href="https://pub-a992ee0ec0954f6dbf5bcbd43eda038f.r2.dev/amznreview.pdf"
-            target="_blank"
-          >
+            target="_blank">
             <section>
               <div class="section_title">Amazon Gift Card Reviews</div>
               <div class="about_section">
-                <span style="display: block"
-                  >Utilized Python and Weka to predict product star ratings
-                  based on review text</span
-                >
+                <span style="display: block">Utilized Python and Weka to predict
+                  product star ratings
+                  based on review text</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; Python</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  Python</span>
               </div>
             </section>
           </a>
@@ -243,15 +191,13 @@
             <section>
               <div class="section_title">Rocket Dish</div>
               <div class="about_section">
-                <span style="display: block"
-                  >My Wordpress blog from CM268 course at Arcadia
-                  University</span
-                >
+                <span style="display: block">My Wordpress blog from CM268 course
+                  at Arcadia
+                  University</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; HTML & CSS</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  HTML & CSS</span>
               </div>
             </section>
           </a>
@@ -262,9 +208,8 @@
                 <span style="display: block">JavaFX Paint program.</span>
               </div>
               <div class="bottom_section">
-                <span style="display: inline-block"
-                  ><i class="fas fa-code"></i>&nbsp; Java</span
-                >
+                <span style="display: inline-block"><i class="fas fa-code"></i>&nbsp;
+                  Java</span>
               </div>
             </section>
           </a>
@@ -279,9 +224,8 @@
         <div id="blogs"></div>
       </div>
       <div id="footer">
-        <a href="https://github.com/imfunniee" target="_blank"
-          >made on earth by a human</a
-        >
+        <a href="https://github.com/imfunniee" target="_blank">made on earth by
+          a human</a>
       </div>
     </div>
     <script type="text/javascript">
